add note for non-hover devices

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         eternal universe."
       </h1>
       <p><strong>Stan Lee</strong></p>
+      <p class="non-hover-msg">
+        <b>
+          Sorry mate, this project is all about hover effects, that I cannot
+          offer to you on your current device.</b
+        >
+      </p>
     </header>
 
     <main>
